WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
220434
[MSE] Fix potential crash in SourceBufferPrivateAVFObjC::destroyParser
https://bugs.webkit.org/show_bug.cgi?id=220434
Summary
[MSE] Fix potential crash in SourceBufferPrivateAVFObjC::destroyParser
Eric Carlson
Reported
2021-01-07 14:05:34 PST
Fix potential crash in SourceBufferPrivateAVFObjC::destroyParser
Attachments
Patch
(1.70 KB, patch)
2021-01-07 14:08 PST
,
Eric Carlson
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Eric Carlson
Comment 1
2021-01-07 14:06:09 PST
<
rdar://problem72753434
>
Eric Carlson
Comment 2
2021-01-07 14:08:31 PST
Created
attachment 417210
[details]
Patch
Eric Carlson
Comment 3
2021-01-07 14:12:48 PST
<
rdar://problem/72753434
>
EWS
Comment 4
2021-01-07 14:40:19 PST
Committed
r271261
: <
https://trac.webkit.org/changeset/271261
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 417210
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug