[MSE] Fix potential crash in SourceBufferPrivateAVFObjC::destroyParser https://bugs.webkit.org/show_bug.cgi?id=220434

Reviewed by Jer Noble.

* platform/graphics/avfoundation/objc/SourceBufferPrivateAVFObjC.mm:
(WebCore::SourceBufferPrivateAVFObjC::destroyParser): NULL-check
m_mediaSource->player() before using it.


Canonical link: https://commits.webkit.org/232848@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@271261 268f45cc-cd09-0410-ab3c-d52691b4dbfc